--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+# Add the PDFTRON_LICENSE_KEY variable here.
+# For trial purposes leave it blank.
+# For production add a valid commercial license key.
+PDFTRON_LICENSE_KEY=
