--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@pdftron/react-native-pdf": "^3.0.2-beta.118",
     "react": "17.0.2",
     "react-native": "0.67.1"
   },
