--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pdftron/react-native-pdf": "^3.0.2-beta.118",
+    "expo": "44.0.6",
     "react": "17.0.2",
     "react-native": "0.67.1"
   },
