--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@pdftron/react-native-pdf": "^3.0.2-beta.118",
     "expo": "44.0.6",
-    "react-native-track-player": "2.2.0-rc4",
+    "expo-av": "10.2.1",
+    "react-native-track-player": "2.1.3",
     "react": "17.0.2",
     "react-native": "0.67.1"
   },
